--- a/resources/views/perfil.ejs
+++ b/resources/views/perfil.ejs
@@ -5,265 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUKY</title>
+    <link rel="stylesheet" href="/css/perfil.css">
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <style type="text/css">
-        /*=====================================
-        reset estilos
-        no es necesario que copies esto
-        =====================================*/
-
-        html {
-            -webkit-text-size-adjust: 100%;
-            -ms-text-size-adjust: 100%;
-            text-size-adjust: 100%;
-            line-height: 1.4;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-        }
-
-        body {
-            color: #404040;
-            font-family: "Arial", Segoe UI, Tahoma, sans-serif, Helvetica Neue, Helvetica;
-        }
-
-        /*=====================================
-        estilos de la utilidad
-        Copiar esto
-        =====================================*/
-        .perfil-usuario {
-            background-color: #d8f5f4;
-            color: #333;
-        }
-
-        .perfil-usuario .sombra {
-            position: absolute;
-            display: block;
-            background: linear-gradient(transparent, rgba(0, 0, 0, .5));
-            width: 100%;
-            height: 50%;
-            bottom: 0;
-            left: 0;
-        }
-
-        .perfil-usuario .portada-perfil,
-        .perfil-usuario .sombra {
-            border-radius: 0 0 20px 20px;
-        }
-
-        .perfil-usuario img {
-            width: 100%;
-        }
-
-        .contenedor-perfil {
-            max-width: 1024px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .perfil-usuario .contenedor-perfil {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 90%;
-        }
-
-        .perfil-usuario .portada-perfil {
-            display: block;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            position: relative;
-            height: 20rem;
-            margin-bottom: .5rem;
-        }
-
-        .perfil-usuario .avatar-perfil {
-            display: block;
-            width: 230px;
-            height: 230px;
-            background-color: #D9DCF1;
-            position: absolute;
-            bottom: -65px;
-            left: 4rem;
-            border-radius: 50%;
-            overflow: hidden;
-            border: 8px solid #FFFFFF;
-            box-shadow: 0 0 12px 2px rgba(0, 0, 0, .2);
-        }
-
-        .perfil-usuario .datos-perfil {
-            position: absolute;
-            display: block;
-            width: calc(100% - 230px - 8rem);
-            right: 0;
-            bottom: 0;
-            color: #fff;
-            text-shadow: 0 0 5px rgba(0, 0, 0, .2);
-            padding-bottom: 1rem;
-            padding-right: 1rem;
-        }
-
-        .perfil-usuario .titulo-usuario {
-            font-size: 2.3rem;
-            white-space: nowrap;
-            margin-bottom: .5rem;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
-        .perfil-usuario .bio-usuario {
-            font-size: 1em;
-            margin-bottom: .75rem;
-        }
-
-        .perfil-usuario .lista-perfil {
-            list-style: none;
-        }
-
-        .perfil-usuario .lista-perfil li {
-            display: inline-block;
-            font-size: 1em;
-            margin-right: 1rem;
-        }
-
-        .perfil-usuario .menu-perfil ul {
-            display: flex;
-            list-style: none;
-            margin-left: calc(200px + 8rem);
-            width: calc(100% - 200px - 8rem);
-        }
-
-        .perfil-usuario .menu-perfil ul li {
-            margin-right: 1rem;
-        }
-
-        .perfil-usuario .menu-perfil a {
-            display: block;
-            text-decoration: none;
-            color: inherit;
-            padding: 8px 20px;
-            font-weight: bold;
-            border-radius: 8px;
-            transition: all ease-in 100ms;
-        }
-
-        .perfil-usuario .menu-perfil a:hover {
-            background-color: #4CB0C6;
-            color: #fff;
-        }
-
-        .perfil-usuario .icono-perfil {
-            display: none;
-            margin-right: .75rem;
-        }
-
-        @media (max-width: 780px) {
-            .perfil-usuario .contenedor-perfil {
-                width: 100%;
-            }
-
-            .perfil-usuario .avatar-perfil {
-                left: calc(50% - 115px)
-            }
-
-            .perfil-usuario .datos-perfil {
-                bottom: 200px;
-                left: 0;
-                width: 100%;
-                padding: 15px;
-                text-align: center;
-            }
-
-            .perfil-usuario .bio-usuario {
-                font-size: 1em;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-            }
-
-            .perfil-usuario .titulo-usuario {
-                font-size: 2.1rem;
-            }
-
-            .perfil-usuario .portada-perfil {
-                height: 28rem;
-            }
-
-            .perfil-usuario .menu-perfil ul {
-                flex-direction: column;
-            }
-
-            .perfil-usuario .lista-perfil {
-                display: block;
-            }
-
-            .perfil-usuario .menu-perfil {
-                margin-top: 2rem;
-            }
-
-            .perfil-usuario .menu-perfil ul {
-                display: flex;
-                list-style: none;
-                margin-left: auto;
-                margin-right: auto;
-                padding-top: 2.5rem;
-                width: 70%;
-                background-color: #fff;
-                border-radius: 12px;
-                box-shadow: 0 0 12px 2px rgba(0, 0, 0, .1);
-            }
-
-            .perfil-usuario .icono-perfil {
-                display: inline-block;
-            }
-        }
-
-        .posts-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 1rem;
-            margin-top: 2rem;
-            overflow-y: auto;
-            max-height: 70vh; /* Limit height to 70% of viewport height */
-        }
-
-        .post {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 1rem;
-        }
-
-        .post h3 {
-            margin-bottom: 0.5rem;
-        }
-
-        .post p {
-            margin-bottom: 0.5rem;
-        }
-
-        .add-post-button {
-            background-color: #4CB0C6;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 8px;
-            cursor: pointer;
-            display: block;
-            margin-top: 1rem;
-        }
-    </style>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
-
     <section class="perfil-usuario">
         <div class="contenedor-perfil">
             <div class="portada-perfil">
@@ -272,58 +20,134 @@
                     <img src="http://localhost/multimedia/relleno/img-c9.png" alt="img">
                 </div>
                 <div class="datos-perfil">
-                    <h4 class="titulo-usuario" id="username">Nombre de usuario</h4>
-                    <p class="bio-usuario" id="email">Correo electrónico</p>
-                    <p class="bio-usuario" id="creation-date">Fecha de creación</p>
+                    <h4 class="titulo-usuario">
+                        <%= user.nombres %> <%= user.apellidoPaterno %> <%= user.apellidoMaterno %>
+                    </h4>
+                    <p class="bio-usuario">
+                        <%= user.email %>
+                    </p>
+                    <p class="bio-usuario">Fecha de creación: <%= user.fechaCreacion %></p>
                 </div>
             </div>
             <div class="menu-perfil">
                 <ul>
-                    <li><a href="#" title=""><i class="icono-perfil fas fa-bullhorn"></i> Publicaciones</a></li>
+                    <li><button id="agregar-publicacion">Agregar Publicación</button></li>
+                    <li><a href="#" title="Cerrar Sesión" onclick="document.getElementById('logout-form').submit();"><i class="icono-perfil fas fa-bullhorn"></i> Cerrar Sesión</a></li>
                 </ul>
             </div>
         </div>
 
         <section class="posts-container" id="posts-container">
-            <!-- Posts will be appended here -->
-            <!-- <button class="add-post-button">Add Post</button> -->
+            <% if (publicaciones.length === 0) { %>
+                <p>Aún no has publicado nada.</p>
+            <% } else { %>
+                <% publicaciones.forEach(publicacion => { %>
+                    <div class="post">
+                        <h3><%= publicacion.tituloP %></h3>
+                        <p><%= publicacion.descripcion %></p>
+                        <p>Precio Inicial: <%= publicacion.precioI %></p>
+                        <p>Precio Final: <%= publicacion.precioF %></p>
+                        <p>Valoración: <%= publicacion.valoracion %></p>
+                    </div>
+                <% }) %>
+            <% } %>
         </section>
+
+        <!-- Sección de modal del HTML -->
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <form id="modal-form" method="post" action="/post/publicar">
+                    <h1>Agrega una publicación</h1>
+                    <input type="text" id="tituloP" name="tituloP" placeholder="Título Publicación"><br>
+                    <input type="text" id="descripcion" name="descripcion" placeholder="Descripción"><br>
+                    <input type="text" id="precioI" name="precioI" placeholder="Precio Inicial"><br>
+                    <input type="text" id="precioF" name="precioF" placeholder="Precio Final"><br>
+                    <select id="input5" name="categoriaID">
+                        <option value="" disabled selected>Seleccione una opción</option>
+                        <% categorias.forEach(categoria => { %>
+                            <option value="<%= categoria.ID %>"><%= categoria.tipoCategoria %></option>
+                        <% }) %>
+                    </select><br>
+                    <button type="submit" id="submit-button">Agregar Publicación</button>
+                </form>
+                <p id="modalMessage" style="color: red;"></p> <!-- Mensaje de error -->
+            </div>
+        </div>
     </section>
-    <!--====  End of html  ====-->
+
+    <form id="logout-form" action="/auth/logout" method="POST" style="display: none;"></form>
 
     <script>
-        async function fetchProfileData() {
-            try {
-                const response = await fetch('/auth/profile');
-                const data = await response.json();
+        document.addEventListener('DOMContentLoaded', function () {
+            // Elementos del modal
+            const modal = document.getElementById("modal");
+            const closeButton = document.getElementsByClassName("close")[0];
+            const modalMessage = document.getElementById("modalMessage");
 
-                document.getElementById('username').textContent = `${data.nombre} ${data.apellidoP} ${data.apellidoM}`;
-                document.getElementById('email').textContent = data.email;
-                document.getElementById('creation-date').textContent = `Fecha de creación: ${data.fechaCreacion}`;
+            // Mostrar el modal
+            document.getElementById('agregar-publicacion').addEventListener('click', function () {
+                modal.style.display = "block";
+            });
 
-                const postsContainer = document.getElementById('posts-container');
-                postsContainer.innerHTML = ''; // Clear any existing posts
-
-                data.publicaciones.forEach(publicaciones => {
-                    const postElement = document.createElement('div');
-                    postElement.classList.add('publicaciones');
-                    postElement.innerHTML = `
-                        <h3>${publicaciones.tituloP}</h3>
-                        <p>${publicaciones.descripcion}</p>
-                        <p>Precio Inicial: ${publicaciones.precioI}</p>
-                        <p>Precio Final: ${publicaciones.precioF}</p>
-                        <p>Valoración: ${publicaciones.valoracion}</p>
-                    `;
-                    postsContainer.appendChild(postElement);
-                });
-
-               
-            } catch (error) {
-                console.error('Error fetching profile data:', error);
+            // Cerrar el modal
+            closeButton.onclick = function () {
+                modal.style.display = "none";
             }
-        }
 
-        document.addEventListener('DOMContentLoaded', fetchProfileData);
+            window.onclick = function (event) {
+                if (event.target === modal) {
+                    modal.style.display = "none";
+                }
+            }
+
+            // ACTIVACION DE MODAL SCRIPT PARA LA CARGA
+            document.getElementById('modal-form').addEventListener('submit', function (event) {
+                let isValid = true;
+                let errorMessage = "Por favor complete los siguientes campos:\n";
+
+                const tituloP = document.getElementById('tituloP');
+                if (tituloP.value.trim() === '') {
+                    isValid = false;
+                    errorMessage += "- Título de la Publicación\n";
+                }
+
+                const descripcion = document.getElementById('descripcion');
+                if (descripcion.value.trim() === '') {
+                    isValid = false;
+                    errorMessage += "- Descripción\n";
+                }
+
+                const precioI = document.getElementById('precioI');
+                if (precioI.value.trim() === '') {
+                    isValid = false;
+                    errorMessage += "- Precio Inicial\n";
+                }
+
+                const input5 = document.getElementById('input5');
+                if (input5.value === '') {
+                    isValid = false;
+                    errorMessage += "- Selección de Opción\n";
+                }
+
+                const precioF = document.getElementById('precioF');
+                if (precioF.value.trim() === '') {
+                    isValid = false;
+                    errorMessage += "- Precio Final\n";
+                }
+
+                if (!isValid) {
+                    event.preventDefault();
+                    showModal(errorMessage);
+                }
+            });
+
+            // Función para mostrar el modal con un mensaje
+            function showModal(message) {
+                modalMessage.textContent = message;
+                modal.style.display = "block";
+            }
+        });
     </script>
 </body>
 
